# PoseAdapter

./: .gitignore  README.md  cmd.txt  requirements-test.txt  requirements.txt  start.sh  test_debug_visualization.py  test_vis_simple.py  test_yolo.py  安全实验.md
config/: params.yaml  params_example.yaml
doc/: RGB_LiDAR融合方案.md  adapter_README.md  calibrate_README.md  install_pytorch_cuda_jetson.md  unitree_go2_sdk_api.md
scripts/: start_mediamtx.sh
src/: __init__.py
src/adapter/: __init__.py  controller.py
src/calibrate/: __init__.py  calibrate_go2_camera.sh  calibrate_go2_onekey.sh  calibrate_opencv.py  default_camera_calib.yaml  pub_camera_raw.sh  publish_go2_camera.py  read_calib_params.py
src/calibrate/calibration_results/: rtsp_camera_calib.yaml
src/pose_adapter/: CMakeLists.txt  package.xml  setup.py
src/pose_adapter/config/: default_camera_calib.yaml
src/pose_adapter/launch/: pose_adapter.launch
src/pose_adapter/scripts/: pose_adapter_node.py  read_calib_params.py
src/pose_adapter/src/pose_adapter/: __init__.py  camera.py  controller.py  controller_base.py  controller_go2.py  controller_k40t.py  controller_zsi1.py  detector.py  ocr.py  pose_adapter_node.py  pose_solver.py  tracker.py
tests/: README.md  __init__.py  conftest.py  test_contour.py  test_pipeline.py
tests/fixtures/: calib_sample.yaml
tests/unit/: __init__.py  test_adapter_placeholders.py  test_pose_solver.py  test_read_calib_params.py
