<?xml version="1.0"?>
<package format="2">
  <name>pose_adapter</name>
  <version>1.0.0</version>
  <description>Pose Adapter for Go2 meter inspection using ROS1</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>dynamic_reconfigure</depend>
  
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-yaml</exec_depend>
</package>