<?xml version="1.0"?>
<package format="3">
  <name>pose_adapter</name>
  <version>1.0.0</version>
  <description>Pose Adapter for Go2/ZSI-1 meter inspection using ROS2</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <exec_depend>python-opencv</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-yaml</exec_depend>

  <member_of_group>ament_cmake_components</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
